2011-09-09  Stefano Lattarini  <stefano.lattarini@gmail.com>

	aclocal: better URL reference in error message
	* aclocal.in (scan_file): In the error message about underquoted
	definitions, reference the automake page at `www.gnu.org', not
	at `sources.redhat.com'.

2011-09-09  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: distcheck-hook to catch missing/outdated *.m4 files
	Related to automake bug#9037.
	* tests/distcheck-missing-m4.test: New test.
	* tests/distcheck-outdated-m4.test: Likewise.
	* tests/distcheck-hook-m4.am: New data file, used by the new
	tests.
	* tests/Makefile.am (distcheck-m4-missing.log,
	distcheck-m4-outdated.log): Depend on it.
	(EXTRA_DIST): Distribute it.
	(TESTS): Add the new tests.

2011-09-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	aclocal: more granularity in acdir overriding
	Before this change, using the `--acdir' option caused aclocal to
	redefine both the directory of automake-provided m4 macros and the
	directory of third-party system-wide m4 macros.  With this change,
	we deprecate the `--acdir' aclocal option, and introduce two new
	options `--automake-acdir' and `--system-acdir', to allow for more
	granularity.
	* aclocal.in (@automake_includes, @system_includes,
	@user_includes): Fix and extend comments.
	(usage): Update.
	(handle_acdir_option): New function.
	(parse_arguments): Recognize new options `--system-acdir' and
	`automake-acdir', and handle `--acdir' using the new function
	above.  Simplify logic by assuming that the directory of
	third-party system-wide m4 files always exists.
	* tests/aclocal.in: Update to use the new options, instead of
	the deprecated. `--acdir'.
	* m4/dirlist: Move ...
	* m4/acdir/dirlist: ... here.
	* m4/Makefile.am (EXTRA_DIST): Update.
	(m4datadir): Rename ...
	(automake_acdir): ... to this.  Accordingly, ...
	(dist_m4data_DATA): ... rename this ...
	(dist_automake_ac_DATA): ... to this.
	(system_acdir): New, directory.