@@ -37,28 +37,28 @@ AC_DEFUN([MY_MACRO], [my--macro])
 END
 
 $ACLOCAL --automake-acdir am
-$AUTOCONF
+$AUTOCONF --force
 $FGREP 'fake--init--automake' configure
 $FGREP 'MY_MACRO' configure
 
 rm -rf autom4te*.cache
 
 $ACLOCAL --system-acdir sys
-$AUTOCONF
+$AUTOCONF --force
 $FGREP 'am__api_version' configure
 $FGREP 'my--macro' configure
 
 rm -rf autom4te*.cache
 
 $ACLOCAL --automake-acdir am --system-acdir sys
-$AUTOCONF
+$AUTOCONF --force
 $FGREP 'fake--init--automake' configure
 $FGREP 'my--macro' configure
 
 rm -rf autom4te*.cache
 
 $ACLOCAL --system-acdir sys --automake-acdir am
-$AUTOCONF
+$AUTOCONF --force
 $FGREP 'fake--init--automake' configure
 $FGREP 'my--macro' configure
 
@@ -69,20 +69,26 @@ cat > am/bar.m4 <<'END'
 AC_DEFUN([MY_MACRO], [am--macro])
 END
 $ACLOCAL --automake-acdir am --system-acdir sys
-$AUTOCONF
+$AUTOCONF --force
 $FGREP 'fake--init--automake' configure
 $FGREP 'am--macro' configure
 $FGREP 'my--macro' configure && Exit 1 # Just to be sure.
+
+rm -rf autom4te*.cache
 
 # Obsolescent `--acdir' option.
 $ACLOCAL -Wobsolete --acdir am 2>stderr && { cat stderr >&2; Exit 1; }
 cat stderr >&2
 grep '.*--acdir.*deprecated' stderr
 
+rm -rf autom4te*.cache
+
 $ACLOCAL -Wno-obsolete --acdir am
-$AUTOCONF
+$AUTOCONF --force
 $FGREP 'fake--init--automake' configure
 $FGREP 'am--macro' configure
+
+rm -rf autom4te*.cache
 
 $ACLOCAL -Wno-obsolete --acdir sys 2>stderr && { cat stderr >&2; Exit 1; }
 cat stderr >&2
