@@ -1,3 +1,11 @@
+2011-09-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: fix spurious failure on fast machines
+	* tests/aclocal-acdir.test: Avoid spurious failures due to caching
+	issues, by cleaning the autom4te cache between all the aclocal
+	invocations, and by always calling autoconf with the `--force'
+	flag.
+
 2011-09-09  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	aclocal: better URL reference in error message
